_includes/manuals/1.12/5.5.2_recovery.md

Recovery process is supposed to be performed on the same host the backup was
created on on the same distribution and version.

If you planning to *migrate* Foreman instance, please read remarks in the
beginning of this chapter.

Note: Foreman instance must be stopped before proceeding.

#### PostgreSQL, MySQL, SQLite

Run ```foreman-rake db:import_dump file=/your/db/dump/location```. This will load your
dump into the current database for your environment. It will print a message
to notify you when it has finished importing the dump.

Remember to stop the Foreman instance and any other process consuming data from the
database temporarily during the import and turn it back on after it ends.

#### Configuration

On Red Hat compatible systems issue the following command to restore whole /etc
directory structure:

    tar --selinux -xzvf etc_foreman_dir.tar.gz -C /

For all other distribution do similar command:

    tar -xzvf etc_foreman_dir.tar.gz -C /

It is recommended to extract files to an empty directory first and inspect the
content before overwriting current files (change -C option to an empty
directory).

#### Puppet master

On the puppet master node, issue the following command to restore Puppet
certificates on Red Hat compatible systems

    tar --selinux -xzvf var_lib_puppet_dir.tar.gz -C /

For all other distribution do similar command:

    tar -xzvf var_lib_puppet_dir.tar.gz -C /

It is recommended to inspect the content of the restore first (see above).

#### DHCP, DNS and TFTP services

Depending on used software packages, perform recovery of important data and
configuration files according to the documentation. This depends on the
software and distribution that is in use.

#### Changing the FQDN

It's preferable when migrating to keep the FQDN unchanged to reduce the risk
of configuration errors from references to the old hostname.

However if the FQDN does change, check and update the following items:

* [Foreman settings](manuals/{{page.version}}/index.html#3.5.2ConfigurationOptions) under *Administer > Settings*:
    * *General > foreman_url* - URL of the Foreman web UI
    * *Provisioning > unattended_url* - URL of the Foreman web API for unattended provisioning
    * *Provisioning > ssl_certificate*, *ssl_priv_key* - paths to SSL certificate and key used for smart proxy communications
* The registered smart proxy URL if installed, edit via *Infrastructure > Smart Proxies*
* Puppet SSL certs: generate new ones with `puppet cert generate NEW_FQDN`
* Apache configs: update `conf.d/*-{foreman,puppet}.conf` with new SSL cert/key filenames, ServerName and VirtualHost IP addresses if applicable
* Smart proxy configuration files in `/etc/foreman-proxy`:
    * `settings.yml` - update SSL cert/key filenames
    * `settings.d/dns_nsupdate_gss.yml` - update `dns_tsig_principal` if the principal name has changed
    * `settings.d/puppet_proxy_legacy.yml` - update SSL cert/key filenames
    * `settings.d/puppet_proxy_puppet_api.yml` - update SSL cert/key filenames
    * `settings.d/realm.yml` - update `realm_principal` if the principal name has changed
    * `settings.d/templates.yml` - update `template_url` for URL of the Foreman web API
* Puppet masters: URLs and cert/key filenames in `/etc/puppetlabs/puppet/foreman.yaml` or `/etc/puppet/foreman.yaml`

